# Diploma_Dispatch

./: .gitignore  CMakeLists.txt  algorithm.cpp  algorithm.hpp  contractors.json  data1.json  data2.json  imitation.cpp  imitation.hpp  main.cpp  models.hpp  utils.cpp  utils.hpp
data/: data1.json  data3.json  data5_15_70_12.json  data5_15_85_10.json  data5_15_90_5.json
